syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package ratepb;

service RateAPI {
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc Set(SetRequest) returns (SetResponse) {}
    rpc Update(UpdateRequest) returns (google.protobuf.Empty) {}
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {}
}

message Rate {
	string UUID = 1;
	int32 Rating = 2;
	string UserUUID = 3;
	string CommentUUID = 4;
	string ProductUUID = 5;
	google.protobuf.Timestamp createdAt = 6;
	google.protobuf.Timestamp updatedAt = 7;
	google.protobuf.Timestamp deletedAt = 8;
}

message GetRequest {
    string UUID = 1;
}

message GetResponse {
    Rate rate = 1;
}

message SetRequest {
	Rate rate = 1;
}

message SetResponse {
    string UUID = 1;
}

message UpdateRequest {
	Rate rate = 1;
}

message DeleteRequest {
    string UUID = 1;
}
